<resources>
    <string name="app_name">Simple UI Quest</string>
    <string name="blank"> </string>
    <string name="welcome">Welcome to the Wild Code School !</string>
    <string name="wilder">Yes, I want to be a Wilder!</string>
    <string name="name">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="button">ACCEPT</string>
    <string name="empty">Please fill your firstname and lastname</string>
    <string name="validate">Congratulation </string>
</resources>
